# pot-app-tts-plugin-microsoft

./: Cargo.toml  README.md  README_EN.md  info.json
.github/workflows/: build.yml
build-for-linux/: entrypoint.sh
src/: lib.rs
